# xfunky

./: .gitignore  LICENSE  PKGBUILD  README.md  cabal.sandbox.config  default.nix  install.sh  make_deb.sh  makefile  stack.yaml  xfunky-1.0-1-any.pkg.tar.xz  xfunky-1.0.ebuild  xfunky.cabal  xfunky.hs  xmonado.hs
config/plasma-workspace/env/: set_window_manager.sh
conky/: conky.conf  dbus.lua
debian/: changelog  control  copyright  files  xfunky.substvars
statusbar/: bar.sh  conky.lua  dbus.lua  statusbar  utils.lua
usr-overlay/share/applications/: xfunky.desktop
usr-overlay/share/kde4/apps/ksmserver/windowmanagers/: xfunky.desktop
usr-overlay/share/xfunky/: 20-noveau.conf  xinitrc
usr-overlay/share/xfunky/config/gtk-3.0/: gtk.css
usr-overlay/share/xfunky/xfunky/: 20-xcompmgr.conf  30-conky.conf  40-taffybar.conf
xfunky/: start.sh
xmonad/: stack.yaml  xfunky.cabal  xfunky.hs  xmonad.hs
xmonad/src/: xfunky.hs
